# llvm-project

amd/comgr/: pyproject.toml
amd/device-libs/: pyproject.toml
amd/hipcc/: pyproject.toml
llvm/: pyproject.toml
