[build-system]
requires = [
       "scikit-build-core",
       "rocm-llvm @ https://externalrocmci.blob.core.windows.net/wheels/rocm_llvm-19.0.0-cp37-abi3-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl"
]
build-backend = "scikit_build_core.build"

[project]
name = "rocm-comgr"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION.txt"
regex = '''(?m)#COMGR_VERSION_MAJOR\s*\n(?P<major>\d+)\s*\n#COMGR_VERSION_MINOR\s*\n(?P<minor>\d+)'''
result = "{major}.{minor}.0"

[tool.scikit-build]
build.verbose = true
wheel.py-api = "cp37"
cmake.args = [
    "-DCMAKE_BUILD_TYPE=Release",
    "-DCOMGR_DISABLE_SPIRV=1",
    "-DCMAKE_PREFIX_PATH=/home/rocm/.local/lib/python3.10/site-packages"
]

[tool.cibuildwheel]
build = "cp37*manylinux*"
manylinux-x86_64-image = "manylinux_2_28"
archs = ["x86_64"]
