# build this from the amd/comgr dir
# e.g., cd amd/comgr; pip install . or cibuildwheel

[build-system]
requires = [
       "scikit-build-core",
       "rocm-llvm @ https://externalrocmci.blob.core.windows.net/wheels/rocm_llvm-19.0.0-cp37-abi3-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl",
       "rocm-device-libs @ https://externalrocmci.blob.core.windows.net/wheels/rocm_device_libs-1.0.0-cp37-abi3-linux_x86_64.whl",
       "rocm-cmake @ https://externalrocmci.blob.core.windows.net/wheels/rocm_cmake-0.1.0-cp37-abi3-linux_x86_64.whl"
]
build-backend = "scikit_build_core.build"

[project]
name = "rocm-comgr"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION.txt"
regex = '''(?m)#COMGR_VERSION_MAJOR\s*\n(?P<major>\d+)\s*\n#COMGR_VERSION_MINOR\s*\n(?P<minor>\d+)'''
result = "{major}.{minor}.0"

[tool.scikit-build]
build.verbose = true
wheel.py-api = "cp37"
cmake.args = [
    "-DCMAKE_BUILD_TYPE=Release",
    "-DCOMGR_DISABLE_SPIRV=1",
    "-DBUILD_TESTING=OFF" # test directory has pre-built .so going against spirit of manylinux
    # testing flag also errors out, looking for hip-runtime in cibuildwheel virtual environment but pip install works fine
]

[tool.cibuildwheel]
build = "cp37*manylinux*"
manylinux-x86_64-image = "manylinux_2_28"
archs = ["x86_64"]
