[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
readme = "README.md"
dynamic = ["name","version"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = '''project\(\s*(?P<name>\S+)\s*VERSION\s*"(?P<version>\d+\.\d+\.\d+)"\s*\)'''
result = "{name}-{version}"

# Transform project name to lowercase and replace underscores with hyphens
[tool.setuptools.dynamic]
version = {cmd = "python -c 'import re; name = \"{name}\".lower().replace(\"_\", \"-\"); print(f\"{name}-{version}\")'"}

[tool.scikit-build]
build.verbose = true
wheel.py-api = "cp37"
cmake.args = [
    "-DCMAKE_BUILD_TYPE=Release",
    "-DCMAKE_PREFIX_PATH=$(python -m site --user-site)"
]

[tool.cibuildwheel]
build = "cp3*manylinux*"
manylinux-x86_64-image = "manylinux_2_28"
archs = ["x86_64"]
