[build-system]
requires = [
       "scikit-build-core",
       "rocm-llvm @ https://externalrocmci.blob.core.windows.net/wheels/rocm_llvm-19.0.0-cp37-abi3-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl"
]
build-backend = "scikit_build_core.build"

[project]
name = "rocm-device-libs"
requires-python = ">=3.7"
readme = "README.md"
dynamic = ["version"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = '''project\(\s*\S+\s*VERSION\s*"(?P<version>\d+\.\d+\.\d+)"\s*\)'''
result = "{version}"

[tool.scikit-build]
build.verbose = true
wheel.py-api = "cp37"
cmake.args = [
    "-DCMAKE_BUILD_TYPE=Release"
]

[tool.cibuildwheel]
build = "cp37*manylinux*"
manylinux-x86_64-image = "manylinux_2_28"
archs = ["x86_64"]
# auditwheel expects compiled objects or libraries
# this project on its own does not produce these, so replace the auditwheel step
repair-wheel-command = "{python} -m pip wheel . -w {dest_dir}"
